# SplatRagBench

./: .gitignore  Cargo.toml  README.md  benchmark_report.txt  benchmark_results.csv  build.rs  fast_ingest.py  queries.txt  rag_benchmark.py  requirements.txt  runbench  scifact.geom  scifact.sem  splat_sizes.json
debug_index/: .managed.json  meta.json
models/: manifold.safetensors  tokenizer.json
src/: adapter.rs  config.rs  constants.rs  embeddings.rs  ingest.rs  lib.rs  main.rs  manifold.rs  memory_system.rs  memory_topology.rs  model.rs  nomic_daemon.py  search.rs  semantics.rs  server.rs  splat_engine.rs  structs.rs  types.rs
src/encoder/: mod.rs
src/genesis/: semantics.rs  statistics.rs
src/gpu/: context.rs  memory.rs  mod.rs  rips.rs  test_integration.rs
src/gpu/gpu/: mod.rs  rips.rs
src/gpu/gpu/lophat/: cuda.rs
src/gpu/lophat/: cuda.rs  mod.rs
src/indexing/: fingerprint.rs  mod.rs  persistent_homology.rs  tcs.rs  text_index.rs
src/ingest/: shaper.rs
src/language/: g_prime.rs
src/learning/: evolutionary.rs  tda_engine.rs
src/llm/: loader.rs  mod.rs  qwen.rs
src/perceptual/: phase_locked_oscillator.rs  takens_embedding.rs  topological_perceiver.rs
src/physics/: gaussian.rs  mod.rs  tissue.rs
src/regulation/: emergence_controller.rs  mod.rs  topological_homeostasis.rs  wundt_optimizer.rs
src/retrieval/: dual_process.rs  hippocampal.rs  hybrid.rs  mod.rs
src/storage/: memory.rs  mod.rs  transaction.rs
src/token_promotion/: consensus.rs  dynamic_tokenizer.rs  engine.rs  mod.rs  pattern_discovery.rs  simulation.rs  spatial.rs
